--- a/css/print.css
+++ b/css/print.css
@@ -25,7 +25,7 @@ header p {
 }
 
 .profiles {
-  display:none;
+  /*display:none;*/
 }
 
 .content {
@@ -70,10 +70,12 @@ header p, .content-text, .work-listing p, .content-text ul li:first-child, .work
 }
 
 .content-text ul li:first-child {
-  width:50%;
+  /*width:50%;*/
+  width:32%;
 }
 
 .profiles-listing ul li:first-child {
+  /*width:50%;*/
   width:32%;
 }
 
